feat: add fish config files

--- a/install
+++ b/install
@@ -2,6 +2,9 @@
 
 DOTFILES=$(cd $(dirname "${BASH_SOURCE[0]}") && pwd)
 
+rm -rf $HOME/.config/fish/config.fish
+ln -s $DOTFILES/fish/config.fish $HOME/.config/fish/config.fish
+
 rm -rf $HOME/.config/kitty
 ln -s $DOTFILES/kitty $HOME/.config/kitty
 
