refactor: rename t script to something more meaningful

--- a/install
+++ b/install
@@ -13,8 +13,8 @@ ln -s $DOTFILES/tmux/tmux.conf $HOME/.tmux.conf
 
 mkdir -p $HOME/.local/bin
 
-rm -rf $HOME/.local/bin/t
-ln -s $DOTFILES/scripts/t $HOME/.local/bin/t
+rm -rf $HOME/.local/bin/tmux-sessionizer
+ln -s $DOTFILES/scripts/tmux-sessionizer $HOME/.local/bin/tmux-sessionizer
 
 rm -rf $HOME/.config/nvim
 ln -s $DOTFILES/nvim $HOME/.config/nvim
