--- a/install
+++ b/install
@@ -2,8 +2,12 @@
 
 DOTFILES=$(cd $(dirname "${BASH_SOURCE[0]}") && pwd)
 
+# Fish config
 rm -rf $HOME/.config/fish/config.fish
 ln -s $DOTFILES/fish/config.fish $HOME/.config/fish/config.fish
+
+rm -rf $HOME/.config/fish/alias.fish
+ln -s $DOTFILES/fish/alias.fish $HOME/.config/fish/alias.fish
 
 rm -rf $HOME/.config/kitty
 ln -s $DOTFILES/kitty $HOME/.config/kitty
