--- a/install
+++ b/install
@@ -9,6 +9,10 @@ ln -s $DOTFILES/fish/config.fish $HOME/.config/fish/config.fish
 rm -rf $HOME/.config/fish/alias.fish
 ln -s $DOTFILES/fish/alias.fish $HOME/.config/fish/alias.fish
 
+rm -rf $HOME/.config/fish/functions/fish_ssh_agent.fish
+ln -s $DOTFILES/fish/functions/fish_ssh_agent.fish $HOME/.config/fish/functions/fish_ssh_agent.fish
+
+# Kitty config
 rm -rf $HOME/.config/kitty
 ln -s $DOTFILES/kitty $HOME/.config/kitty
 
